[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-affordability-calculator"
version = "0.1.0"
description = "Home Affordability Calculator with Streamlit"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "streamlit>=1.28.0,<2.0",
    "plotly>=5.15.0,<6.0",
    "numpy>=1.24.0,<3.0",
]
